--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created as a challenge for Bossabox"
     />
     <title>VUTTR</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
